# community-energy-flexibility-os

./: .gitignore  CONTRIBUTING.md  README.md  fly.toml  pyproject.toml
api/: .dockerignore  Dockerfile
api/community_energy_api/: __init__.py  carbon.py  main.py  models.py  reference.py  service.py
api/tests/: conftest.py  test_api.py  test_carbon_provider.py
app/: streamlit_app.py
data/reference/: ni_carbon_profile.json
dbt_energy/: .user.yml
dbt_energy/models/marts/reporting/: _schema.yml  dim_community.sql  dim_date.sql  dim_device.sql  fct_daily_savings.sql  rpt_daily_savings.sql  rpt_monthly_community_savings.sql
dbt_energy/models/staging/: stg_daily_savings.sql
dbt_energy/seeds/: seed_daily_savings.csv
docs/: ARCHITECTURE.md  CASE_STUDY.md  CLAIM_LEDGER.md  DATA_SOURCES.md  DEPLOYMENT.md  FUTURE_RESEARCH.md  METHODOLOGY.md  POWERBI_DASHBOARD_GUIDE.md  POWERBI_MODEL_REVIEW.md  RETRO.md  ROADMAP.md  RUNBOOK.md  STATUS.md
orchestration/: assets.py
powerbi/: measures.dax  theme.json
scripts/: build_ni_carbon_profile.py  case_study.py  generate_powerbi_seed.py  retro_demo.py
src/community_energy_flex/: __init__.py
src/community_energy_flex/data_sources/: carbon_intensity.py  http.py  octopus_agile.py  tariffs.py  weather.py
src/community_energy_flex/domain/: models.py
src/community_energy_flex/experiments/: __init__.py  optimiser_comparison.py
src/community_energy_flex/monitoring/: __init__.py  retro.py  store.py
src/community_energy_flex/optimisation/: __init__.py  confidence.py  linear_programming.py  metrics.py  robustness.py  rule_based.py
src/community_energy_flex/pipeline/: daily.py
src/community_energy_flex/reporting/: excel_report.py  pdf_report.py  summary.py
tests/: test_carbon_intensity.py  test_linear_programming.py  test_monitoring_store.py  test_octopus_agile.py  test_optimiser_comparison.py  test_public_claims.py  test_reports.py  test_retro.py  test_robustness.py  test_weather.py
warehouse/: snowflake_setup.sql
web/: .env.example  .gitignore  DESIGN_BRIEF.md  DESIGN_BRIEF_SUPPLEMENT.md  DESIGN_NOTES.md  UI_SPEC.md  next.config.ts  package-lock.json  package.json
web/app/: error.tsx  fonts.ts  globals.css  layout.tsx  loading.tsx  page.tsx
web/app/api/appliances/: route.ts
web/app/api/optimise/: route.ts
web/app/methodology/: page.tsx
web/app/plan/: page.tsx
web/components/: BandLegend.tsx  DayBand.tsx  Masthead.module.css  Masthead.tsx
web/lib/: api.ts  config.ts  format.ts  proxy.ts  scoring.ts  server-data.ts  types.gen.ts  types.ts
(+3 files in other folders)
