[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-energy-flex"
version = "0.2.1"
description = "Decision-support tool that recommends when to run flexible electricity loads to cut cost and carbon."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cheng-Yuan King", email = "rosscyking1115@gmail.com" }]
keywords = ["energy", "carbon", "flexibility", "demand-response", "optimisation"]
dependencies = ["tzdata>=2025.2; platform_system == 'Windows'"]

[project.optional-dependencies]
app = ["streamlit>=1.36"]
reports = ["openpyxl>=3.1", "reportlab>=4.0"]
warehouse = ["dbt-duckdb>=1.7", "duckdb>=0.10"]
snowflake = ["dbt-snowflake>=1.7"]
orchestration = ["dagster>=1.7", "dagster-webserver>=1.7"]
optim = ["pulp>=2.7"]
tracking = ["mlflow>=2.9"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pulp>=2.7",
    "httpx>=0.27",
    "fastapi>=0.110",
    "openpyxl>=3.1",
    "reportlab>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "api"]
testpaths = ["tests", "api/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests", "api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
